[tool.poetry]
name = "llm-rag"
version = "0.0.1"
description = "The project's objective is to describe java classes and functions"
authors = ["JayGhiya"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
