[tool.poetry]
name = "llm-rag"
version = "0.0.1"
description = "The project's objective is to describe java classes and functions"
authors = ["JayGhiya"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "^0.5.1"
chromadb = "^0.4.14"
langchain = "^0.0.319"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
